<resources>
    <string name="app_name">Espica</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_phone">شماره همراه خود را برای دریافت کد فعالسازی وارد کنید</string>
    <string name="enter_code">کد فعالسازی را وارد کنید</string>
    <string name="accept">تایید</string>
    <string name="login_with_phone">ورود با شماره تلفن</string>
    <string name="login_with_google">ورود با حساب گوگل</string>
    <string name="home">خانه</string>
    <string name="invite">معرفی به دوستان</string>
    <string name="about_us">درباره ما</string>
    <string name="setting">تنظیمات</string>
    <string name="download">دانلودها</string>
    <string name="fav">علاقه\u200cمندی ها</string>
    <string name="review">مرور</string>
    <string name="exercise">تمرین</string>
    <string name="advance"><![CDATA[ پیشرفته]]></string>
    <string name="intermediate">متوسط</string>
    <string name="beginner">مبتدی</string>
    <string name="know">بلدم</string>
    <string name="dont_know">بلد نیستم</string>
    <string name="add_to_litner">اضافه به لایتنر</string>
    <string name="phrase">عبارت</string>
    <string name="desc">توضیحات</string>
    <string name="message_add_to_leitner">عبارت مورد نظر با موفقیت به لایتنر اضافه شد</string>
    <string name="error">خطا!</string>
    <string name="title">عنوان</string>
    <string name="no_leitner">کارت دیگری برای مرور در این تاریخ وجود ندارد</string>
    <string name="no_leitner_list">کارتی برای مرور در این تاریخ وجود ندارد</string>
    <string name="error_code">کد وارد شده صحیح نیست</string>
    <string name="cartFront">روی کارت</string>
    <string name="cartBack">پشت کارت</string>
    <string name="notify_channel">Espica notify channel</string>
    <string name="pause">توقف</string>
    <string name="play">پخش</string>
</resources>
